- Replaced price field in ShoppingCart with a list   of Products.

--- a/Csharp/ParallelAndNarrowChange/ParallelAndNarrowChange.csproj
+++ b/Csharp/ParallelAndNarrowChange/ParallelAndNarrowChange.csproj
@@ -66,6 +66,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Field\ImagineThisIsAClientInADifferentRepository.cs" />
+    <Compile Include="Field\IProduct.cs" />
+    <Compile Include="Field\Product.cs" />
     <Compile Include="Field\ShoppingCart.cs" />
     <Compile Include="Method\AnotherClientOfAuthenticator.cs" />
     <Compile Include="Method\AuthenticationService.cs" />
